@@ -17,15 +17,15 @@
 
 package org.apache.solr.client.solrj.request;
 
-import java.util.Collection;
-
+import org.apache.solr.client.solrj.SolrRequest;
 import org.apache.solr.client.solrj.SolrServer;
 import org.apache.solr.client.solrj.SolrServerException;
-import org.apache.solr.client.solrj.SolrRequest;
 import org.apache.solr.client.solrj.response.QueryResponse;
 import org.apache.solr.common.params.CommonParams;
 import org.apache.solr.common.params.SolrParams;
 import org.apache.solr.common.util.ContentStream;
+
+import java.util.Collection;
 
 /**
  * 
@@ -58,7 +58,7 @@ public class QueryRequest extends SolrRequest
    */
   @Override
   public String getPath() {
-    String qt = query.get( CommonParams.QT );
+    String qt = query == null ? null : query.get( CommonParams.QT );
     if( qt == null ) {
       qt = super.getPath();
     }
